--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,7 @@
       href="https://fonts.googleapis.com/css2?family=Roboto&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap"
       rel="stylesheet"
     />
-    <title>Minhas tarefas</title>
+    <title>App Agenda</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
